Edits to Chapter 3 and part of 4

--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -60,7 +60,7 @@ Based on the above-mentioned opportunity to define methods that incorporate unce
 
 \begin{enumerate}
   \item Can geothermal exploration risk be mitigated by insights derived from readily-available data sources with little change in project cost? Can the data establish additional actions for further risk reduction before drilling a geothermal well? 
-  \item How can characterization of present and future uncertainties influence the development strategy for geothermal facilities? In what ways will such an approach mitigate risk, if at all?
+  \item How can characterization of present and future uncertainties influence the development and production strategy for geothermal facilities? In what ways will such an approach mitigate risk, if at all?
 \end{enumerate}
 
 \hfill\break
