--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,22 @@
 
+@misc{scikit-learn_pipelines_2021,
+	title = {Pipelines and composite estimators},
+	url = {https://scikit-learn.org/stable/modules/compose.html#pipeline},
+	urldate = {2021-08-05},
+	journal = {6.1. Pipelines and composite estimators — scikit-learn 0.24.2 documentation},
+	author = {{scikit-learn}},
+	year = {2021},
+}
+
+@misc{scikit-learn_logistic_2021,
+	title = {Logistic regression},
+	url = {https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression},
+	urldate = {2021-06-23},
+	journal = {1.1. Linear Models — scikit-learn 0.24.2 documentation},
+	author = {{scikit-learn}},
+	year = {2021},
+}
+
 @techreport{nrel_2020_2020,
 	title = {2020 {Annual} {Technology} {Baseline}},
 	url = {https://atb.nrel.gov/electricity/2021/geothermal},
@@ -1050,15 +1068,6 @@ Volume: 2021},
 	url = {https://www.coursera.org/learn/machine-learning},
 	author = {Ng, Andrew},
 	year = {2011},
-}
-
-@misc{scikit-learn_1111_2021,
-	title = {1.1.11. {Logistic} regression},
-	url = {https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression},
-	urldate = {2021-06-23},
-	journal = {1.1. Linear Models — scikit-learn 0.24.2 documentation},
-	author = {{scikit-learn}},
-	year = {2021},
 }
 
 @book{bertsimas_analytics_2016,
